maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (getY() !=0 && (c!=0||getDirection = Direction.NORTH)) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                        ^Escaper:12: error: not found: value c
  while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (getY() !=0 && (c!=0||getDirection = Direction.NORTH)) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                                                                                                  ^